# feature-express

./: .dockerignore  .gitignore  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bump_version.py  requirements-dev.txt
examples/: test_event.py  (+1 more)
fexpress-main/: Cargo.toml  build.rs
fexpress-main/fexpress-core/: aggr.rs  datetime_utils.rs  eval.rs  event.rs  event_index.rs  expr.pest  feature_matrix.rs  features.rs  features_rewrite.rs  impls.rs  interval.rs  lib.rs  macros.rs  map.rs  naive_aggregate_funcs.rs  obs_dates.rs  partial_agg.rs  sstring.rs  stats.rs  types.rs
fexpress-main/fexpress-core/algo/: intersect.rs  mod.rs  topo_sort.rs
fexpress-main/fexpress-core/ast/: analyze.rs  core.rs  display.rs  mod.rs  simple_graph.rs  traverse.rs
fexpress-main/fexpress-core/evaluation/: date.rs  date_common.rs  macros.rs  mod.rs  regex.rs  text.rs
fexpress-main/fexpress-core/event_store/: mod.rs  test_implementations.rs
fexpress-main/fexpress-core/event_store/column_event_store/: README.md  mod.rs  raw_column.rs
fexpress-main/fexpress-core/event_store/postgres/: mod.rs  postgres_batch_insert.rs  postgres_event_store.rs
fexpress-main/fexpress-core/parser/: error_helper.rs  expr_parser.rs
fexpress-main/fexpress-core/parser_nom/: main.rs  operators.rs  symbols.rs
fexpress-main/fexpress-core/partial_aggregates/: README.md  abs_energy.rs  abs_sum_of_changes.rs  all.rs  any.rs  approx_median.rs  argmax.rs  argmin.rs  average_time_between.rs  complete_implementations.py  count.rs  first.rs  has_duplicate.rs  has_duplicate_max.rs  has_duplicate_min.rs  kurtosis.rs  last.rs  max_consecutive_true.rs  maximum.rs  mean.rs  minimum.rs  mod.rs  mode.rs  n_unique.rs  nth.rs  online_standard_deviation.rs  product.rs  root_mean_square.rs  skewness.rs  standard_deviation.rs  sum.rs  variance.rs
fexpress-main/fexpress-core/tests/: fake_nba.rs  fake_nba_games_test.rs  test_utils.rs
fexpress-main/fexpress-derive/: Cargo.toml
fexpress-main/fexpress-derive/src/: lib.rs
fexpress-py/: Cargo.toml  README.md  pyproject.toml  setup.py
fexpress-py/fexpress/: __init__.py  prompt.py
fexpress-py/fexpress/sdk/: event.py  event_scope_config.py  observation_dates_config.py  query_config.py
fexpress-py/fexpress_python/: __init__.py
fexpress-py/fexpress_python/sdk/: event.json  event_query_config.json  event_query_config.py  event_store_settings.json  event_store_settings.py  observation_dates_config.json  observation_dates_config.py
fexpress-py/src/: lib.rs
fexpress-py/tests/: test_examples.py
fexpress-py/tests_python/: feature express NBA dataset.ipynb  test_event.py
(+101 files in other folders)
