[package]
authors = ["Paweł Jankiewicz <p.jankiewicz@gmail.com>"]
edition = "2018"
name = "fexpress-main"
version = "0.1.0"

[dependencies]
csv = "1.2.2"
enum_dispatch = "0.3.11"
itertools = "0.10.5"
kstring = "1.0.6"
lazy_static = "1.4.0"
pest = "2.6.0"
pest_derive = "2.6.0"
rayon = "1.7.0"
serde_json = "1.0.96"
slotmap = "1.0.6"
fexpress-derive = { path = "fexpress-derive" }
strum = { version = "0.24", features = ["derive"] }
strum_macros = { version = "0.24" }
strsim = "0.10.0"
rand = "0.8.5"
prettytable = "0.10.0"
convert_case = "0.6.0"
regex = "1.8.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
vec1 = { version = "1.10.1", features = ["serde"] }
derivative = "2.2.0"
nom = "7.1.3"
schemars = { version = "0.8.12", features = ["derive", "chrono"] }
ordered-float = { version = "3.7.0", features = ["serde"] }
bit-vec = "0.6.3"
get-size = "0.1.3"
paste = "1.0.12"
enum_delegate = "0.2.0"
bincode = "1.3.3"
lz4_flex = "0.10.0"
enum-as-inner = "0.6.0"
petgraph = "0.6.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4.26"

[dependencies.hashbrown]
features = ["serde"]
version = "0.11.2"

[dependencies.postgres]
features = ["with-chrono-0_4", "with-serde_json-1"]
version = "0.19.5"

[dependencies.postgres-types]
features = ["derive", "with-serde_json-1"]
version = "0.2.5"

[dependencies.pyo3]
features = ["extension-module", "hashbrown"]
version = "0.18.3"

[dependencies.serde]
features = ["derive"]
version = "1.0.163"

[dev-dependencies]
rstest = "*"
rstest_reuse = "*"
serial_test = "0.5.1"
criterion = "0.5.1"

[features]
use_hashbrown = []
use_smol_str = []
use_kstring = []

[lib]
name = "fexpress_core"
path = "fexpress-core/lib.rs"

[[bin]]
name = "generate_json_schemas"
path = "fexpress-core/bin/generate_json_schemas.rs"

[[bin]]
name = "nba_column_store"
path = "fexpress-core/bin/nba_column_store.rs"
