[package]
name = "fexpress"
version = "0.0.6"
edition = "2018"

[dependencies]
fexpress-main = { path = "../fexpress-main" }
serde_json = "1.0.96"

[dependencies.serde]
features = ["derive"]
version = "1.0.163"

[dependencies.pyo3]
features = ["extension-module", "hashbrown"]
version = "0.18.3"

[lib]
crate-type = ["cdylib"]